--- a/index.html
+++ b/index.html
@@ -23,19 +23,14 @@
 <body>
 
     <header>
-        <!-- ▼▼▼ ここからが今回の修正の核心です ▼▼▼ -->
-        <h1>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1050 120" aria-labelledby="site-title" role="img">
-                <title id="site-title">ゲームを選んで遊ぼう！</title>
-                <text x="50%" y="50%" dy=".35em" text-anchor="middle">ゲームを選んで遊ぼう！</text>
-            </svg>
-        </h1>
-        <!-- ▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲ -->
+        <!-- ▼▼▼ タイトルを元のシンプルなテキストに戻しました ▼▼▼ -->
+        <h1>ゲームを選んで遊ぼう！</h1>
+        <!-- ▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲ -->
         <p class="subtitle">AIコーディングで制作したゲームを公開中</p>
     </header>
 
     <main class="game-grid">
-        <!-- LCP改善: 最初の画像に fetchpriority="high" を追加 -->
+        <!-- (以下、変更はありません) -->
         <a href="https://core-calmdust.github.io/aicoding/danmaku-inv.html" class="game-card">
             <img src="./images/danmaku-inv.webp" alt="DANMAKU INVADER XTREME+" fetchpriority="high" decoding="async">
             <div class="card-content">
@@ -43,7 +38,6 @@
             </div>
         </a>
         
-        <!-- 2-4番目の画像 -->
         <a href="https://core-calmdust.github.io/aicoding/pong.html" class="game-card">
             <img src="./images/pong.webp" alt="CYBER PONG XTREME+" decoding="async">
             <div class="card-content">
@@ -65,7 +59,6 @@
             </div>
         </a>
 
-        <!-- 5番目以降: 遅延読み込み -->
         <a href="https://core-calmdust.github.io/aicoding/connect4.html" class="game-card">
             <img src="./images/connect4.webp" alt="コネクテッド4の画像" loading="lazy" decoding="async">
             <div class="card-content">
