--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
         <a href="https://core-calmdust.github.io/aicoding/pong.html" class="game-card">
             <img src="./images/pong.webp" alt="CYBER PONG XTREME+" decoding="async">
             <div class="card-content">
-                <h2>CYBER PONG XTREME+</h2>
+                <h2>CYBER PONG XTREME+📱</h2>
             </div>
         </a>
         
         <a href="https://core-calmdust.github.io/aicoding/reversi_v3.html" class="game-card">
             <img src="./images/reversi_v3.webp" alt="リバーシ" decoding="async">
             <div class="card-content">
-                <h2>リバーシ</h2>
+                <h2>リバーシ v3.1📱</h2>
             </div>
         </a>
 
