--- a/reversi_v3.html
+++ b/reversi_v3.html
@@ -565,12 +565,12 @@
                             <option value="2">レベル2 (最大反転)</option>
                             <option value="3">レベル3 (場所評価)</option>
                             <option value="4">レベル4 (α-β法 弱)</option>
-                            <option value="5">レベル5 (α-β法 強)</option>
+                            <option value="5" selected>レベル5 (α-β法 強)</option>
                             <option value="6">レベル6 (思考強化)</option>
-                            <option value="7" selected>レベル7 (定石+探索)</option>
+                            <option value="7">レベル7 (定石+探索)</option>
                             <option value="8">レベル8 (複合型AI)</option>
                             <option value="9">レベル8+ (多様性)</option>
-                            <option value="10">レベル9 (戦略的評価型AI)</option>
+                            <option value="10">レベル9 (戦略評価型AI)</option>
                         </select>
 <div class="start-controls-wrapper" role="radiogroup" aria-label="手番選択">
                         <label title="先攻 (黒)">
