--- a/comet.html
+++ b/comet.html
@@ -112,7 +112,7 @@
 // =================================================================================
 const RANKING_CONFIG = {
     // 【重要】Nhostプロジェクトのダッシュボードで取得したGraphQL EndpointのURLをここに貼り付けてください
-    API_ENDPOINT: "https://buzwefzmjzyifbzrufpt.nhost.run/v1/graphql", 
+    API_ENDPOINT: "https://buzwefzmjzyifbzrufpt.ap-southeast-1.nhost.run/v1/graphql", 
 };
 // =================================================================================
 // ▲▲▲ オンラインランキング用設定 ▲▲▲
