--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
 
     <main class="game-grid">
         <!-- (以下、変更はありません) -->
+
+        <a href="https://core-calmdust.github.io/aicoding/comet/" class="game-card">
+            <img src="./images/comet.webp" alt="COMET OUTBURST" fetchpriority="high" decoding="async">
+            <div class="card-content">
+                <h2>COMET OUTBURST</h2>
+            </div>
+        </a>
+        
         <a href="https://core-calmdust.github.io/aicoding/danmaku-inv.html" class="game-card">
             <img src="./images/danmaku-inv.webp" alt="DANMAKU INVADER XTREME+" fetchpriority="high" decoding="async">
             <div class="card-content">
