--- a/comet/index.html
+++ b/comet/index.html
@@ -1002,7 +1002,7 @@ let effectTimer = 0;      // テキスト切り替えエフェクトの時間を
 const DESCRIPTION_DISPLAY_DURATION = 120; // 説明文の表示時間 (2秒 @ 60fps)
 const EFFECT_DURATION = 12; // エフェクトの時間 (0.2秒 @ 60fps)
 const MODE_DESCRIPTIONS = [
-    'SHMUP-style Blasting through Enemy',
+    'SHMUP-style Blasting through Enemies',
     'Stay Alive through Energy',
     'Dance Between the Falling Comets'
 ];
