--- a/comet/index.html
+++ b/comet/index.html
@@ -8,7 +8,7 @@
     <!-- 1. 基本情報 -->
     <title>COMET OUTBURST - サイバー弾幕シューティング・ドッジゲーム</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="「COMET OUTBURST」は、シンセウェイヴのビートに乗りながら彗星群を潜り抜けるレトロSF弾幕ドッジゲームです。プロシージャルなBGM生成や、ライブコーディングで作り上げた熱気を感じてください。ハイスコアを目指し、光の軌跡を刻め！">
+    <meta name="description" content="「COMET OUTBURST」は、シンセウェイヴのビートに乗りながら彗星群を潜り抜けるレトロSF弾幕ドッジゲームです。プロシージャルなBGM生成や、バイブコーディング（AIコーディング）で作り上げた熱気を感じてください。ハイスコアを目指し、光の軌跡を刻め！">
     <meta name="keywords" content="弾幕, ドッジゲーム, STG, シューティング, レトロゲーム, 8bit, synthwave, outrun, AI, AI programming, live coding, generative art, procedural generation, javascript game">
     <meta name="author" content="CALMDUST">
     <!-- ▲ 👆 YOUR_NAME_OR_HANDLE をあなたの名前やハンドルネームに書き換えてください -->
@@ -27,7 +27,7 @@
 
     <!-- 4. OGP (Open Graph Protocol) タグ / SNSシェア用 -->
     <meta property="og:title" content="COMET OUTBURST -  サイバー弾幕シューティング・ドッジゲーム">
-    <meta property="og:description" content="シンセウェイヴのビートに乗りながら彗星群を潜り抜けるレトロSF弾幕シューティング・ドッジゲーム。スリリングなゲームプレイでライブコーディングの熱気を感じてください。">
+    <meta property="og:description" content="シンセウェイヴのビートに乗りながら彗星群を潜り抜けるレトロSF弾幕シューティング・ドッジゲーム。スリリングなゲームプレイでバイブコーディング（AIコーディング）の熱気を感じてください。">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://core-calmdust.github.io/aicoding/comet/">
     <!-- ▲ 👆 YOUR_GAME_DOMAIN をあなたのゲームを公開するドメインに書き換えてください -->
@@ -51,7 +51,7 @@
       "name": "COMET OUTBURST",
       "url": "https://core-calmdust.github.io/aicoding/comet/",
       "image": "https://core-calmdust.github.io/aicoding/comet/ogp-image.webp",
-      "description": "「COMET OUTBURST」は、シンセウェイヴのビートに乗りながら彗星群を潜り抜けるレトロSF弾幕シューティング・ドッジゲームです。プロシージャルなBGM生成や、ライブコーディングで作り上げた熱気を感じてください。",
+      "description": "「COMET OUTBURST」は、シンセウェイヴのビートに乗りながら彗星群を潜り抜けるレトロSF弾幕シューティング・ドッジゲームです。プロシージャルなBGM生成や、ライブコーディング（AIコーディング）で作り上げた熱気を感じてください。",
       "keywords": "弾幕, ドッジゲーム, STG, シューティング, レトロゲーム, 8bit, synthwave, outrun, AI, AI programming, live coding, generative art, procedural generation, javascript game",
       "author": {
         "@type": "Person",
